crates/tests/other-db-tests/src/aurora/snapshots/other_db_tests__aurora__query_tests__predicates__select_where_and.snap
---
source: crates/tests/other-db-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Van Halen III"
      }
    ]
  }
]
