crates/tests/other-db-tests/src/aurora/snapshots/other_db_tests__aurora__query_tests__predicates__select_where_name_in.snap
---
source: crates/other-db-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 346,
        "Title": "Mozart: Chamber Music"
      }
    ]
  }
]
