crates/tests/other-db-tests/src/aurora/snapshots/other_db_tests__aurora__query_tests__predicates__select_where_related_exists.snap
---
source: crates/tests/other-db-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "title": "Santana",
        "albums": {
          "rows": [
            {
              "title": "Supernatural"
            },
            {
              "title": "Santana - As Years Go By"
            },
            {
              "title": "Santana Live"
            }
          ]
        }
      }
    ]
  }
]
